2011-01-11 Thunor <thunorsif_at_hotmail.com>
* Auto-loading of 80 and 81 files is implemented as o and p.
* The ZX81's LOAD "progname" will now open a file as lower or uppercase
  within the directory currently set within the load file dialog.

2011-01-10 Thunor <thunorsif_at_hotmail.com>
* Modified supported RAM sizes: it's now 1 to 4K, 16, 32, 48 and 56K.
* Auto-loading of ZX80 o and ZX81 p files is now implemented for all
  RAM configurations.

2011-01-07 Thunor <thunorsif_at_hotmail.com>
* Added support for the mouse wheel: remapped as keyboard cursor keys.

2010-12-20 Thunor <thunorsif_at_hotmail.com>
* Added show_input_id to the rcfile (was a CLI option).
* Implemented variable emulation speed but I haven't yet managed to
  iron out the problems with slowing down and speeding up the sound
  (if at all I can) so I've disabled the code for the time being.

2010-12-18 Thunor <thunorsif_at_hotmail.com>
* Added sound device selection to the runtime options.
* Added sound device to the rcfile.

2010-12-15 Thunor <thunorsif_at_hotmail.com>
* Added frameskip adjustment to the runtime options.
* Added frameskip to the rcfile.

2010-12-14 Thunor <thunorsif_at_hotmail.com>
* Added RAM size changing to the runtime options.
* Added RAM size to the rcfile.

2010-12-13 Thunor <thunorsif_at_hotmail.com>
* Added vkeyb autohide, toggle_shift and alpha to the rcfile.
* Added invert screen to the rcfile.

2010-12-12 Thunor <thunorsif_at_hotmail.com>
* Added machine model switching to the runtime options.
* Added machine model to the rcfile.

2010-12-08 Thunor <thunorsif_at_hotmail.com>
* Added support for (in addition to z81's 1K to 16K) 32K, 48K and 56K of
  RAM. load_p now loads up to 48K instead of z81's 16K limit.

2010-12-07 Thunor <thunorsif_at_hotmail.com>
* Added support for a thorough runtime reinitialisation of z81 (sz81
  was tweaked a little). RAM and ROM changes have been tested to work.

2010-12-06 Thunor <thunorsif_at_hotmail.com>