@@ -37,6 +37,15 @@
 #define MODEL_ZX81 0
 #define MODEL_ZX80 1
 
+/* Load file methods */
+#define LOAD_FILE_METHOD_NONE 0
+#define LOAD_FILE_METHOD_AUTOLOAD 1
+#define LOAD_FILE_METHOD_FORCEDLOAD 2
+#define LOAD_FILE_METHOD_NAMEDLOAD 3
+#define LOAD_FILE_METHOD_SELECTLOAD 4
+#define LOAD_FILE_METHOD_SELECTLOADOK 5
+#define LOAD_FILE_METHOD_STATELOAD 6
+
 /* 16KB was fine for everything but the Wiz is currently experiencing
  * linear buffer overflow and so I'm quadrupling it for the Wiz only */
 #if defined(PLATFORM_GP2X) && defined (TOOLCHAIN_OPENWIZ)
@@ -203,7 +212,7 @@ void sdl_sound_callback(void *userdata, Uint8 *stream, int len);
 void sdl_sound_frame(unsigned char *data, int len);
 void sdl_sound_end(void);
 int sdl_filetype_casecmp(char *filename, char *filetype);
-int sdl_load_file(int prognameaddr);
+int sdl_load_file(int prognameaddr, int method);
 
 
 
