@@ -93,6 +93,7 @@ struct {
 } joy_cfg;
 
 /* Function prototypes */
+void toggle_load_file_dialog_state(void);
 int runopts_is_a_reset_scheduled(void);
 void key_repeat_manager(int funcid, SDL_Event *event, int eventid);
 void keyboard_buffer_reset(int shift_reset);
